--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "node-js-getting-started",
-  "version": "0.2.5",
-  "description": "A sample Node.js app using Express 4",
+  "name": "social-market",
+  "version": "0.0.1",
+  "description": "Social Market App API",
   "engines": {
     "node": "5.9.1"
   },
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "cool-ascii-faces": "1.3.4",
     "ejs": "2.4.1",
     "express": "4.13.3"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
+    "url": "https://github.com/rraguze/social-market"
   },
   "keywords": [
     "node",
